# travelmap

./: .env.common  README.md  manage.py  pyproject.toml  requirements.txt
db_utils/: create_db.py
main/: forms.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_remove_location_lat_remove_location_lon_and_more.py  0003_image_video_mediagallery.py
main/templates/: base.html
main/templates/includes/: footer.html  header.html
main/templates/main/: about.html  event.html  event_detail.html  event_form.html  index.html  location.html  location_detail.html  location_form.html  profile.html
travelmap/: asgi.py  settings.py  urls.py  wsgi.py
utils/db/: create_db.py
utils/env_utils/: activate_venv.ps1  activate_venv.sh  load_env.py
