[tool.pylint]
output-format = "colorized"

confidence = ""

ignore-paths = [
    "^.*/migrations/.*$",
    "^.*/tests/.*$",
    "^.*/\\.venv/.*$",
    "^.*/venv/.*$",
    "^.*/__pycache__/.*$",
    "^.*\\.pyc$"
]

load-plugins = "pylint_django"

disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "no-self-use",
    "invalid-name",
    "too-few-public-methods",
    "import-error",
    "no-name-in-module",
    "unsubscriptable-object",
    "unsupported-membership-test",
    "unused-argument",
    "arguments-differ",
    "too-many-ancestors",
    "no-member",
    "import-outside-toplevel",
    "consider-using-f-string",
    "line-too-long"
]

max-line-length = 88

django-settings-module = "travelmap.settings"

good-names = [
    "qs",
    "id",
    "pk",
    "url",
    "ex",
    "req",
    "res",
    "i",
    "j",
    "k",
    "v",
    "x",
    "y",
    "z",
    "e",
    "fp",
    "obj",
    "settings"
]

[tool.pylint.MASTER]
ignore = ["migrations", ".venv", "venv", "env", ".env"]
init-hook = """
import sys
try:
    import django
    from django.conf import settings

    if not settings.configured:
        import os
        os.environ.setdefault('DJANGO_SETTINGS_MODULE', 'travelmap.settings')
        django.setup()
except ImportError:
    pass
except Exception as e:
    sys.stderr.write(f"Django setup warning: {e}\\n")
"""

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0801",  # duplicate-code
    "W0613",  # unused-argument
    "W0221",  # arguments-differ
    "C0103",  # invalid-name
]

[tool.pylint.BASIC]
good-names = [
    "id",
    "pk",
    "qs",
    "url",
    "ex",
    "req",
    "res",
    "i",
    "j",
    "k",
    "v",
    "x",
    "y",
    "z",
    "e",
    "fp",
    "obj",
    "settings"
]

[tool.pylint.FORMAT]
max-line-length = 88

[project]
name = "travelmap"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "anyio (==4.12.1)",
    "asgiref (==3.11.0)",
    "astroid (==4.0.3)",
    "build (==1.4.0)",
    "cachecontrol (==0.14.4)",
    "certifi (==2026.1.4)",
    "cffi (==2.0.0)",
    "charset-normalizer (==3.4.4)",
    "cleo (==2.1.0)",
    "crashtest (==0.4.1)",
    "cryptography (==46.0.3)",
    "dill (==0.4.0)",
    "distlib (==0.4.0)",
    "django (==6.0.1)",
    "dulwich (==0.24.10)",
    "fastjsonschema (==2.21.2)",
    "filelock (==3.20.3)",
    "findpython (==0.7.1)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "idna (==3.11)",
    "installer (==0.7.0)",
    "isort (==7.0.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.1.0)",
    "jaraco-functools (==4.4.0)",
    "jeepney (==0.9.0)",
    "keyring (==25.7.0)",
    "mccabe (==0.7.0)",
    "more-itertools (==10.8.0)",
    "msgpack (==1.1.2)",
    "packaging (==25.0)",
    "pbs-installer (==2025.12.17)",
    "pillow (==12.1.0)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.5.1)",
    "poetry (==2.2.1)",
    "poetry-core (==2.2.1)",
    "psycopg2-binary (==2.9.11)",
    "pycparser (==2.23)",
    "pylint (==4.0.4)",
    "pylint-django (==2.7.0)",
    "pylint-plugin-utils (==0.9.0)",
    "pyproject-hooks (==1.2.0)",
    "python-dotenv (==1.2.1)",
    "rapidfuzz (==3.14.3)",
    "requests (==2.32.5)",
    "requests-toolbelt (==1.0.0)",
    "secretstorage (==3.5.0)",
    "shellingham (==1.5.4)",
    "sqlparse (==0.5.5)",
    "tomlkit (==0.14.0)",
    "trove-classifiers (==2026.1.14.14)",
    "typing-extensions (==4.15.0)",
    "urllib3 (==2.6.3)",
    "virtualenv (==20.36.1)",
    "zstandard (==0.25.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
